# newton-auth-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml  sdk-final-design.md
src/newton_auth/: __init__.py  async_core.py  async_http.py  cache.py  config.py  cookies.py  core.py  crypto.py  django.py  errors.py  fastapi.py  http.py  models.py  utils.py
tests/: helpers.py  test_django_functional.py  test_django_route_protection.py  test_fastapi_functional.py  test_fastapi_route_protection.py  test_profile_fields.py
