[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newton-auth"
version = "0.1.0"
description = "Backend-only Newton School authentication SDK for Python applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=41.0.0",
]

[project.optional-dependencies]
django = ["requests>=2.31.0"]
fastapi = ["fastapi>=0.110.0", "httpx>=0.27.0"]
dev = ["ruff", "pre-commit"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
